<resources>
    <string name="app_name">Healthy Helper</string>
    <string name="healthyHelperSplashScreen">Healthy Helper</string>
    <string name="mainMenuTitleText">Press a Button Below to Access a Feature</string>
    <string name="mainMenuArticlesButton">Articles</string>
    <string name="mainMenuBloodGlucoseRecorderButton">Blood Glucose Recorder</string>
    <string name="mainMenuRecipesButton">Recipes</string>
    <string name="mainMenuShoppingCartButton">Shopping\nCart</string>
    <string name="mainMenuHowToUseAppButton">How to use app</string>
    <string name="articlesMenuWhatIsPreDiabetesTitle">What is Pre Diabetes?</string>
    <string name="articlesMenuEatingHealthyWithDiabetesTitle">Eating Healthy With Diabetes</string>
    <string name="articlesMenuKeepingActiveWithDiabetesTitle">Keeping Active With Diabetes</string>
    <string name="articleWhatIsPrediabetesHyperlink">For more information please <a href="https://www2.hse.ie/conditions/pre-diabetes/">visit the HSE website here</a></string>
    <string name="shoppingCartHummusTags">Gluten Free, Dairy Free, Vegan, Vegetarian</string>
    <string name="shoppingCartHummusIngredient1">1 can of drained chickpeas</string>
    <string name="shoppingCartHummusIngredient2">60ml Cold Water (additional 30ml for looser consistency)</string>
    <string name="shoppingCartHummusIngredient3">1 small garlic clove</string>
    <string name="shoppingCartHummusIngredient4">1 lemon</string>
    <string name="shoppingCartHummusIngredient5">3 tablespoons of tahini</string>
    <string name="shoppingCartHummusIngredient6">(Optional) 1 tablespoon of olive oil</string>
    <string name="shoppingCartHummusIngredient7">(Optional) mixed crudités</string>
    <string name="shoppingCartHummusIngredient8">(Optional) Toasted pitta bread</string>
    <string name="shoppingCartPoachedPearsTags">Gluten free, Vegetarian</string>
    <string name="shoppingCartPoachedPearsIngredient1">200ml Apple Juice</string>
    <string name="shoppingCartPoachedPearsIngredient2">1 cinnamon stick</string>
    <string name="shoppingCartPoachedPearsIngredient3">4 just-ripe pears halved length ways and cores cut</string>
    <string name="shoppingCartPoachedPearsIngredient4">60g flaked almonds toasted</string>
    <string name="shoppingCartPoachedPearsIngredient5">300g low fat natural yogurt</string>
    <string name="shoppingCartInstructions">To mark off an ingredient, press an ingredient\nTo undo hold the ingredient</string>
    <string name="shoppingCartResetShoppingCartButton">Reset Shopping Cart</string>
    <string name="howToUseArticlesButton">Articles</string>
    <string name="howToUseBloodGlucoseRecorderButton">Recorder</string>
    <string name="howToUseRecipesButton">Recipes</string>
    <string name="howToUseShoppingCartButton">Shopping Cart</string>
    <string name="howToUseIntroText">Please press one of the buttons above to access the relevant instructions.</string>
    <string name="howToUseArticlesText">Once you have found an article you are interested in reading and pressed its appropriate icon, the article will open on screen. Pressing the link on top of the screen will bring you to the source of the article via your mobile phones web browser (this requires some form of internet connection such as data or WI-FI).\n\n You can view the whole contents of the article by swiping the screen with one finger up/down to scroll the text down/up. The size of the text can also be increased or decreased by pinching the screen with two fingers. NOTE: USING MORE THAN ONE OR TWO FINGERS CAN LEAD TO INCORRECT FUNCTIONALITY.\n\n Finally, if you wish to reset the text’s size to its original, you can either leave the article and come back to it or you can press the “Reset Zoom” button on the bottom of the screen, this will require two presses to function to prevent accidentally losing your progress.</string>
    <string name="howToUseBloodGlucoseRecorderText">Upon opening this feature, you will be greeted to a graph with a visible X axis representing the 24 hour clock (The Y axis shall appear upon adding an entry to the graph). At the bottom of the screen, you can see there are four buttons along with a text box called “Date”.\n\n By pressing said text box a calendar dialog box will appear which is then used to pick the date you wish to record a reading for. You are unable to enter a date that is beyond what is on your phone for example if today is the 2nd of April you cannot plot for the 3rd of April etc until the new day begins which will be shown via a message.\n\n The currently saved dates can be viewed by pressing the “View Dates” button which presents a dialog box containing each entry. This will show the saved dates or if there are currently no saved dates.\n\n To load a date, you need to select a valid date from the dialog box then press “Load Date”. However, if this date has not been previously added before, you are required to press the “Add Date” button just to the right. To remove a previously saved date, this can be done by pressing the “Remove Date” button, NOTE: FOR DATA SAFETY REMOVING A DATE WILL NOT DELETE THE ENTRIES THE ENTERED IN THE TABLE, EACH READING WILL NEED TO BE REMOVED INDIVIDUALLY WHICH WILL BE COVERED WITHIN THE NEXT TWO PARAGRAPHS.\n\n Upon loading a date, 3 new buttons along with 2 new text boxes will appear on the screen. This is where the actual time and glucose reading are recorded. To plot an entry first press the “Time” text box and pick a time from the on-screen time clock dialog box, then plot the reading recorded from your glucose meter and finally press the “Enter Reading” button. If this reading is at a normal level it will appear as a green bar on the bar chart, if it is close to excessive reading this will appear as a orange bar while a dangerous reading will appear as a red bar on the bar chart.\n\n You are unable to plot more than one entry at a specific time on the bar chart so to remove an entry, select the time you wish to remove then press the “Remove Reading” button. If the bars end up becoming too bunched up or difficult to read by pressing the “View Readings” button you will be able to see every entry that has been added along with an identifier (OK, WARNING, DANGER) next to a normal reading, close to excessive or a dangerous reading respectfully.\n\n Similarly, to the shopping cart every date, entry etc will be saved in memory unless the application has been uninstalled or had its storage deleted.\n\n While this may appear daunting there will be messages that will appear at the bottom of the screen which will help to guide you every step of the way, you will be a natural in no time.</string>
    <string name="howToUseRecipesText">Each of the available recipes can be filtered by one of the 4 filter buttons located on top of the screen. Upon selecting one of the filters (Breakfast, Dinner etc) meals matching that filter will remain while those which don’t will be slightly faded with the required filter appearing as text. Attempting to press one of these faded recipes will present you with a message of which filter to press. The filters can be reset by leaving the recipes page and going back into it or by pressing the “Reset Filters” button on the bottom of the screen.\n\n In a similar fashion to the articles section, once you have found a recipe you are interested in reading and pressed its appropriate icon the recipe will open on screen. Pressing the green link on top of the screen will bring you to the source of the article via your mobile phones web browser (this requires some form of internet connection such as data or WI-FI).\n\n You can view the whole contents of the recipe by swiping the screen with one finger up/down to scroll the text down/up. The size of the text can also be increased or decreased by pinching the screen with two fingers. NOTE: USING MORE THAN ONE OR TWO FINGERS CAN LEAD TO INCORRECT FUNCTIONALITY.\n\n if you wish to reset the text’s size to its original, you can either leave the article and come back to it or you can press the “Reset Zoom” button on the bottom of the screen, this will require two presses to function to prevent accidentally losing your progress.\n\n Finally if you are interested in attempting to cook the recipe, you can press the “Add This Recipes Ingredients to the Shopping Cart” button, this will break down the recipes ingredients and place them into the shopping cart indicated by a message on the bottom of the screen. To remove a recipe long press the same button, a message will appear indicating the recipe has been removed.</string>
    <string name="howToUseShoppingCartText">As previously mentioned in the recipes section, once you have found a recipe you are interested in reading and have pressed its appropriate icon the recipe will open on screen. You can press the “Add This Recipes Ingredients to the Shopping Cart” button located on the bottom of the screen which breaks down the recipes ingredients and places them into the shopping cart indicated by a message on the bottom of the screen (or removed via a long press). This will add an entry into the shopping cart where the ingredients can be accessed.\n\n From here a user can remove an ingredient they have purchased or have around the house for whatever reason by pressing one of the yellow buttons containing an ingredient. If this was accidental or it turns out you don’t have enough, long pressing a removed ingredient will re-add the ingredient. If you wish to re-add all the ingredients this can be done by pressing the “Reset Shopping Cart” button on the bottom of the screen.\n\n You do not need to worry about keeping record of which ingredients you have or have not removed as the application will save which have been or have not been removed unless the application has been uninstalled or had its storage deleted.</string>
    <string name="howToUseResetZoomButton">Reset Zoom</string>
    <string name="articlesOverflowMenu">Articles</string>
    <string name="blood_recorderOverflowMenu">Blood Recorder</string>
    <string name="recipesOverflowMenu">Recipes</string>
    <string name="shoppingCartOverflowMenu">Shopping Cart</string>
    <string name="mainMenuOverflowMenu">Main Menu</string>
    <string name="howToUseAppOverflowMenu">How to Use App</string>
</resources>